--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,9 @@ version = "1.0.0"
 description = "Gemini AI CLI Tool for automation"
 readme = "README.md"
 requires-python = ">=3.8"
-dependencies = []
+dependencies = [
+    "b2sdk>=1.18.0"
+]
 
 [project.scripts]
 geminiai = "geminiai_cli.cli:main"
