--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,55 +18,62 @@ ga = "geminiai_cli.cli:main"
 requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
+
+
+
+[project.optional-dependencies]
+dev = [
+  "pytest>=8.0.0",
+  "pytest-cov>=5.0.0",
+  "pytest-timeout>=2.2.0",
+  "pytest-json-report>=1.5.0",
+  "pytest-asyncio>=0.23.0",
+  "pyfakefs>=5.0.0",
+  "ruff>=0.6.0",
+  "black>=24.3.0",
+  "mypy>=1.11.0"
+]
+
 [tool.pytest.ini_options]
-# Make pytest aware of src/ layout
-pythonpath = [
-    "src",
-]
+# All projects use src/ layout
+pythonpath = ["src"]
 
-# Where tests live
-testpaths = [
-    "tests",
-]
+# All tests live under tests/
+testpaths = ["tests"]
 
-# Async support (you use anyio + asyncio)
-asyncio_mode = "strict"
+# Async projects are common in your stack
+asyncio_mode = "auto"
 
-# Optional markers (expand later if needed)
-markers = [
-    "unit: Unit tests",
-    "integration: Integration tests",
-]
-
-# Warnings
-filterwarnings = [
-    "ignore::DeprecationWarning",
-]
-
-# Recommended pytest options
+# Global pytest options
 addopts = [
-    "-v",
-    "-ra",
-    "--tb=short",
-    "--showlocals",
-    "--timeout=10",
-    "--durations=10",
-    "--import-mode=importlib",
-    "--cov=src/geminiai_cli",
-    "--cov-fail-under=97",
-    "--cov-report=term-missing:skip-covered",
-    "--cov-report=html",
-    "--cov-report=xml",
+  "-v",
+  "-ra",
+  "--strict-config",
+  "--strict-markers",
+  "--tb=short",
+  "--showlocals",
+  "--import-mode=importlib",
+
+  # Time & perf
+  "--timeout=10",
+  "--durations=10",
+
+  # Coverage: target the real package
+  "--cov=src/geminiai_cli",
+  "--cov-report=term-missing:skip-covered",
+  "--cov-report=html",
+  "--cov-report=xml",
+  "--cov-fail-under=85",
 ]
 
-# Coverage config
+log_cli = true
+log_cli_level = "INFO"
+
 [tool.coverage.run]
 branch = true
-source = [
-    "src/geminiai_cli",
-]
+source = ["src/geminiai_cli"]
 
 [tool.coverage.report]
-fail_under = 97
+fail_under = 85
 show_missing = true
 skip_covered = true
